--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -12,50 +14,149 @@
   <title>Frontend Mentor | Interactive comments section</title>
 
 </head>
+
 <body>
 
   <section class="comments">
     <div class="comments__inner">
-      <div class="comment" id="1"></div>
-      <div class="comment" id="2"></div>
-      <div class="comments__replay-wrap" id="2"></div>
+      <div class="comment" id="1">
+        <div class="comment__header">
+          <div class="user">
+            <img src="./images/avatars/image-amyrobson.png" class="user-img" width="32" height="32" alt="user-image">
+            <p>amyrobson</p>
+          </div>
+          <p class="date">1 month ago</p>
+        </div>
+        <div class="comment__content">
+          <p>Impressive! Though it seems the drag feature could be improved. But overall it looks incredible. You've
+            nailed the design and the responsiveness at various breakpoints works really well.</p>
+        </div>
+        <div class="comment__actions">
+          <div class="score-wrap">
+            <div class="upvote"></div>
+            <div class="score">12</div>
+            <div class="downvote"></div>
+          </div>
+          <div class="btn-wrap">
+            <button class="action delete">Delete</button>
+            <button class="action reply">Reply</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="comment" id="2">
+        <div class="comment__header">
+          <div class="user">
+            <img src="./images/avatars/image-amyrobson.png" class="user-img" width="32" height="32" alt="user-image">
+            <p>amyrobson</p>
+          </div>
+          <p class="date">1 month ago</p>
+        </div>
+        <div class="comment__content">
+          <p>Impressive! Though it seems the drag feature could be improved. But overall it looks incredible. You've
+            nailed the design and the responsiveness at various breakpoints works really well.</p>
+        </div>
+        <div class="comment__actions">
+          <div class="score-wrap">
+            <div class="upvote"></div>
+            <div class="score">12</div>
+            <div class="downvote"></div>
+          </div>
+          <div class="btn-wrap">
+            <button class="action delete">Delete</button>
+            <button class="action reply">Reply</button>
+            <button class="action edit">Edit</button>
+          </div>
+        </div>
+      </div>
+
+      <div class="comments__replay-wrap" id="2-1">
+        <div class="comments__replay-wrap-inner">
+          <div class="comment" id="3">
+            <div class="comment__header">
+              <div class="user">
+                <img src="./images/avatars/image-amyrobson.png" class="user-img" width="32" height="32"
+                  alt="user-image">
+                <p>amyrobson</p>
+              </div>
+              <p class="date">1 month ago</p>
+            </div>
+            <div class="comment__content">
+              <p>Impressive! Though it seems the drag feature could be improved. But overall it looks incredible. You've
+                nailed the design and the responsiveness at various breakpoints works really well.</p>
+            </div>
+            <div class="comment__actions">
+              <div class="score-wrap">
+                <div class="upvote"></div>
+                <div class="score">12</div>
+                <div class="downvote"></div>
+              </div>
+              <div class="btn-wrap">
+                <button class="action delete">Delete</button>
+                <button class="action reply">Reply</button>
+                <button class="action edit">Edit</button>
+              </div>
+            </div>
+          </div>
+
+          <div class="comment" id="3">
+            <div class="comment__header">
+              <div class="user">
+                <img src="./images/avatars/image-amyrobson.png" class="user-img" width="32" height="32"
+                  alt="user-image">
+                <p>amyrobson</p>
+              </div>
+              <p class="date">1 month ago</p>
+            </div>
+            <div class="comment__content">
+              <p>Impressive! Though it seems the drag feature could be improved. But overall it looks incredible. You've
+                nailed the design and the responsiveness at various breakpoints works really well.</p>
+            </div>
+            <div class="comment__actions">
+              <div class="score-wrap">
+                <div class="upvote"></div>
+                <div class="score">12</div>
+                <div class="downvote"></div>
+              </div>
+              <div class="btn-wrap">
+                <button class="action delete">Delete</button>
+                <button class="action reply">Reply</button>
+                <button class="action edit">Edit</button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
     <div class="comments__add-wrap">
-      <form action="" class="comments__add"></form>
+      <form action="" class="comments__add">
+        <textarea class="textarea" type="text" placeholder="Add a comment..."></textarea>
+        <img class="logged-user-img" src="./images/avatars/image-amyrobson.png" width="44" height="44" alt="">
+        <button class="btn btn__submit" type="submit">SEND</button>
+      </form>
     </div>
   </section>
 
-  <!-- Pull dynamic content from the data.json file -->
-  <div class="comment">
-    <div class="comment__header">
-      <div class="user">
-        <img src="./images/avatars/image-amyrobson.png" class="user-img" width="32" height="32" alt="user-image">
-        <p>amyrobson</p>
-      </div>
-      <p class="date">1 month ago</p>
-    </div>
-    <div class="comment__content">
-      <p>Impressive! Though it seems the drag feature could be improved. But overall it looks incredible. You've nailed the design and the responsiveness at various breakpoints works really well.</p>
-    </div>
-    <div class="comment__actions">
-      <div class="score-wrap">
-        <div class="upvote"></div>
-        <div class="score">12</div>
-        <div class="downvote"></div>
-      </div>
-      <div class="btn-wrap">
-        <button class="action delete">Delete</button>
-        <button class="action reply">Reply</button>
-        <button class="action edit">Edit</button>
-      </div>
+  <div class="modal">
+    <div class="modal__title">Delete comment</div>
+    <p class="modal__text">Are you sure you want to delete this comment? This will the remove comment and can't be
+      undone.</p>
+    <div class="modal__btn-wrap">
+      <button class="btn btn__no">No, cancel</button>
+      <button class="btn btn__yes">Yes, delete</button>
     </div>
   </div>
-  
+  <div class="mask"></div>
+
+
+
   <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Your Name Here</a>.
   </div>
 
   <script src="./scripts/main.js" type="modules"></script>
 </body>
+
 </html>
