added mobile and desktop style, added classes for comment and commentList, added fetching data.json

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     Coded by <a href="#">Your Name Here</a>.
   </div>
 
-  <script src="./scripts/main.js" type="modules"></script>
+  <script src="./scripts/main.js" type="module"></script>
 </body>
 
 </html>
