--- a/index.html
+++ b/index.html
@@ -18,117 +18,7 @@
 <body>
 
   <section class="comments">
-    <div class="comments__inner">
-      <div class="comment" id="1">
-        <div class="comment__header">
-          <div class="user">
-            <img src="./images/avatars/image-amyrobson.png" class="user-img" width="32" height="32" alt="user-image">
-            <p>amyrobson</p>
-          </div>
-          <p class="date">1 month ago</p>
-        </div>
-        <div class="comment__content">
-          <p>Impressive! Though it seems the drag feature could be improved. But overall it looks incredible. You've
-            nailed the design and the responsiveness at various breakpoints works really well.</p>
-        </div>
-        <div class="comment__actions">
-          <div class="score-wrap">
-            <div class="upvote"></div>
-            <div class="score">12</div>
-            <div class="downvote"></div>
-          </div>
-          <div class="btn-wrap">
-            <button class="action delete">Delete</button>
-            <button class="action reply">Reply</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="comment" id="2">
-        <div class="comment__header">
-          <div class="user">
-            <img src="./images/avatars/image-amyrobson.png" class="user-img" width="32" height="32" alt="user-image">
-            <p>amyrobson</p>
-          </div>
-          <p class="date">1 month ago</p>
-        </div>
-        <div class="comment__content">
-          <p>Impressive! Though it seems the drag feature could be improved. But overall it looks incredible. You've
-            nailed the design and the responsiveness at various breakpoints works really well.</p>
-        </div>
-        <div class="comment__actions">
-          <div class="score-wrap">
-            <div class="upvote"></div>
-            <div class="score">12</div>
-            <div class="downvote"></div>
-          </div>
-          <div class="btn-wrap">
-            <button class="action delete">Delete</button>
-            <button class="action reply">Reply</button>
-            <button class="action edit">Edit</button>
-          </div>
-        </div>
-      </div>
-
-      <div class="comments__replay-wrap" id="2-1">
-        <div class="comments__replay-wrap-inner">
-          <div class="comment" id="3">
-            <div class="comment__header">
-              <div class="user">
-                <img src="./images/avatars/image-amyrobson.png" class="user-img" width="32" height="32"
-                  alt="user-image">
-                <p>amyrobson</p>
-              </div>
-              <p class="date">1 month ago</p>
-            </div>
-            <div class="comment__content">
-              <p>Impressive! Though it seems the drag feature could be improved. But overall it looks incredible. You've
-                nailed the design and the responsiveness at various breakpoints works really well.</p>
-            </div>
-            <div class="comment__actions">
-              <div class="score-wrap">
-                <div class="upvote"></div>
-                <div class="score">12</div>
-                <div class="downvote"></div>
-              </div>
-              <div class="btn-wrap">
-                <button class="action delete">Delete</button>
-                <button class="action reply">Reply</button>
-                <button class="action edit">Edit</button>
-              </div>
-            </div>
-          </div>
-
-          <div class="comment" id="3">
-            <div class="comment__header">
-              <div class="user">
-                <img src="./images/avatars/image-amyrobson.png" class="user-img" width="32" height="32"
-                  alt="user-image">
-                <p>amyrobson</p>
-              </div>
-              <p class="date">1 month ago</p>
-            </div>
-            <div class="comment__content">
-              <p>Impressive! Though it seems the drag feature could be improved. But overall it looks incredible. You've
-                nailed the design and the responsiveness at various breakpoints works really well.</p>
-            </div>
-            <div class="comment__actions">
-              <div class="score-wrap">
-                <div class="upvote"></div>
-                <div class="score">12</div>
-                <div class="downvote"></div>
-              </div>
-              <div class="btn-wrap">
-                <button class="action delete">Delete</button>
-                <button class="action reply">Reply</button>
-                <button class="action edit">Edit</button>
-              </div>
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
+    <div class="comments__inner"></div>
     <div class="comments__add-wrap">
       <form action="" class="comments__add">
         <textarea class="textarea" type="text" placeholder="Add a comment..."></textarea>
