--- a/index.html
+++ b/index.html
@@ -16,10 +16,16 @@
 </head>
 
 <body>
+  <section class="container user-action">
+    <div class="user-action__wrap">
+      <button class="btn change-user">Change</button>
+      <button class="btn add-user">Add user</button>
+    </div>
+  </section>
 
   <section class="comments">
     <div class="comments__inner"></div>
-    <div class="comments__add-wrap">
+    <div class="container comments__add-wrap">
       <form action="" class="comments__add">
         <textarea class="textarea" type="text" placeholder="Add a comment..."></textarea>
         <img class="logged-user-img" src="./images/avatars/image-amyrobson.png" width="44" height="44" alt="">
@@ -28,14 +34,20 @@
     </div>
   </section>
 
-  <div class="modal">
-    <div class="modal__title">Delete comment</div>
+
+  <div class="modal delete">
+    <div class="modal__title">Delete comment?</div>
     <p class="modal__text">Are you sure you want to delete this comment? This will the remove comment and can't be
       undone.</p>
     <div class="modal__btn-wrap">
       <button class="btn btn__no">No, cancel</button>
       <button class="btn btn__yes">Yes, delete</button>
     </div>
+  </div>
+  <div class="modal user-action">
+    <button class="modal__close">X</button>
+    <div class="modal__title">Change user</div>
+    <div class="modal__content"></div>
   </div>
   <div class="mask"></div>
 
