add change current user

--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
 <body>
   <section class="container user-action">
     <div class="user-action__wrap">
-      <button class="btn change-user">Change</button>
-      <button class="btn add-user">Add user</button>
+      <button class="btn change-user">Change user</button>
     </div>
   </section>
 
@@ -48,6 +47,7 @@
     <button class="modal__close">X</button>
     <div class="modal__title">Change user</div>
     <div class="modal__content"></div>
+    <button class="btn set-user">Change</button>
   </div>
   <div class="mask"></div>
 
