fix scroll, fix problem with null in  manageActions, add max-width to modal styles

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
   <div class="modal user-action">
     <button class="modal__close">X</button>
-    <div class="modal__title">Change user</div>
+    <div class="modal__title"></div>
     <div class="modal__content"></div>
     <button class="btn set-user">Change</button>
   </div>
