--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     Coded by <a href="#">Łukasz T</a>.
   </div>
 
-  <script src="./scripts/main.js" type="module"></script>
+  <script src="interactive-comments-section/scripts/main.js" type="module"></script>
 </body>
 
 </html>
